# Drone-Mapper-ex2

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  readme.txt  refactor_by_component.md  workplan.md
.cursor/rules/: adv-cpp-standards.mdc  build-and-deps.mdc  error-handling-logging.mdc  ex1-anti-patterns.mdc  frozen-interfaces.mdc  git-workflow-naming.mdc  git-workflow.mdc  io-and-outputs.mdc  mp-units-strong-types.mdc  project-context.mdc  testing-requirements.mdc
.cursor/skills/debug-simulation-failure/: SKILL.md
.cursor/skills/implement-ex2-component/: SKILL.md
.cursor/skills/maps-comparison-utility/: SKILL.md
.cursor/skills/port-from-ex1/: SKILL.md
.cursor/skills/pre-submission-review/: SKILL.md
.cursor/skills/write-component-test/: SKILL.md
.github/workflows/: ci.yml  scenario-runs.yml
context/: AdvCpp Review Guideline.docx  Advanced Topics TAU 2026B - Assignment 1 - v2.docx  Advanced Topics TAU 2026B - Assignment 2 (1).docx  Advanced Topics TAU 2026B - Assignment 2.docx  Error Code Key.xlsx  Exercise 2 Review Guideline.docx
cpp_yaml_example/: main.cpp
data_maps/: scenario_3_map.npy  scenario_4_map.npy  scenario_5_map.npy
docs/: HLD.md  assignment2-checklist.md  ex1-mistakes.md  ex1-to-ex2-porting.md  map3d_impl_contract.md  review-error-codes.md
include/drone_mapper/: DroneControlImpl.h  IDroneControl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMap3D.h  IMissionControl.h  IMutableMap3D.h  ISimulation.h  ISimulationRun.h  ISimulationRunFactory.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  SimulationCoordUtil.h  SimulationManager.h  SimulationRunFactoryImpl.h  SimulationRunImpl.h
include/drone_mapper/io/: ConfigParseResult.h  IRunErrorLog.h  PathResolver.h  RunErrorLog.h  RunPathHelpers.h  SimulationCli.h  SimulationOutputYaml.h  StderrErrorLog.h  TimeFormat.h  YamlConfigParsers.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MissionTypes.h  SimulationTypes.h
scenarios/: composition_scenario3.yaml  composition_scenario4.yaml  composition_scenario5.yaml  drone_ex1port.yaml  lidar_scenario45.yaml  mission_ex1port.yaml  sim_scenario3.yaml  sim_scenario4.yaml  sim_scenario5.yaml
scripts/: convert_ex1_scenario.py  wsl-build.sh
src/: DroneControlImpl.cpp  Map3DImpl.cpp  MappingAlgorithmFrontier.cpp  MappingAlgorithmFrontier.h  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  SimulationCoordUtil.cpp  SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
src/io/: CompositionYamlParser.cpp  DroneConfigYamlParser.cpp  LidarConfigYamlParser.cpp  MissionConfigYamlParser.cpp  PathResolver.cpp  RunErrorLog.cpp  RunPathHelpers.cpp  SimulationCli.cpp  SimulationConfigYamlParser.cpp  SimulationOutputYamlWriter.cpp  StderrErrorLog.cpp  TimeFormat.cpp  YamlParseUtil.cpp  YamlParseUtil.hpp
tests/: CMakeLists.txt
tests/components/: test_drone_control.cpp  test_map3d_impl.cpp  test_mapping_algorithm.cpp  test_mapping_algorithm_frontier.cpp  test_maps_comparison.cpp  test_mission_control.cpp  test_mock_lidar.cpp  test_run_error_log.cpp  test_simulation_cli.cpp  test_simulation_manager.cpp  test_simulation_run.cpp  test_simulation_run_factory.cpp  test_yaml_config_parsers.cpp
tests/data/configs/: composition_benchmark.yaml  composition_continue_after_failure.yaml  composition_e2e.yaml  composition_invalid_drone.yaml  composition_minimal.yaml  drone_bad_value.yaml  drone_small.yaml  lidar_a.yaml  lidar_benchmark.yaml  mission_basic.yaml  mission_smoke.yaml  mission_with_boundaries.yaml  sim_axes_offset.yaml  sim_bad_map.yaml  sim_benchmark.yaml  sim_corrupt_map.yaml  sim_tiny.yaml
tests/data/instructor/compositions/: composition_big_room.yaml  composition_house_lower.yaml  composition_small_room.yaml
tests/data/instructor/simulation/: house_simulation.yaml  large_simulation_out.yaml  large_simulation_room.yaml  small_simulation_out.yaml  small_simulation_room.yaml
tests/data/maps/: corrupt_map.npy
tests/integration/: test_integration_full_flow.cpp
tests/support/: ConfigFixtures.hpp
